# 3DViewer_v1.0

./: Makefile  README.md  manual.md  test.c
backend/: Makefile  reader.c  reader.h  s21_matrix.c  s21_matrix.h  transformation.c  transformation.h
front/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  widget.cpp  widget.h
